Completed SPA slider.

--- a/1/spa.html
+++ b/1/spa.html
@@ -1,13 +1,15 @@
 <!doctype html>
 <html>
 <head>
+  <meta charset="UTF-8">
   <title>SPA 1</title>
   <link href="css/style.css" rel="stylesheet" type="text/css">
   <script type="text/javascript"></script>
 </head>
 <body>
   <div id="spa">
-    <div class="spa-slider"></div>
   </div>
+<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+<script type="text/javascript" src="./js/spa.js"></script>
 </body>
 </html>
