--- a/3/spa/spa.html
+++ b/3/spa/spa.html
@@ -1,15 +1,31 @@
 <!doctype html>
-<html>
+<html lang="en-US">
 <head>
   <meta charset="UTF-8">
   <title>SPA3</title>
-  <link href="css/style.css" rel="stylesheet" type="text/css">
-  <script type="text/javascript"></script>
+
+  <!-- stylesheets -->
+  <link rel="stylesheet" href="css/spa.css" type="text/css">
+  <link rel="stylesheet" href="css/spa.shell.css" type="text/css">
+
+  <!-- third-party javascript -->
+  <script type="text/javascript" src="js/jq/jquery-1.9.1.js"></script>
+  <script type="text/javascript" src="js/jq/jquery.uriAnchor.js"></script>
+
+  <!-- my javascript -->
+  <script type="text/javascript" src="js/spa.js"></script>
+  <script type="text/javascript" src="js/spa.shell.js"></script>
+
+  <!-- initialize the application once the DOM is ready -->
+  <script>
+    $(function () { spa.initModule( $('#spa') ); });
+  </script>
+
 </head>
 <body>
-  <div id="spa">
-  </div>
-<script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
-<script type="text/javascript" src="./js/spa.js"></script>
+  <div id="spa"></div>
+
+<!-- SPAs generate HTML with JS, thus ALL scripts are placed in head -->
+
 </body>
 </html>
