HTML shells/containers completed.

--- a/3/spa/layout.html
+++ b/3/spa/layout.html
@@ -6,5 +6,19 @@
     <link rel="stylesheet" href="css/spa.css" type="text/css"/>
   </head>
   <body>
+    <div id="spa">
+      <div class="spa-shell-head">
+        <div class="spa-shell-head-logo"></div>
+        <div class="spa-shell-head-acct"></div>
+        <div class="spa-shell-head-search"></div>
+      </div>
+      <div class="spa-shell-main">
+        <div class="spa-shell-main-nav"></div>
+        <div class="spa-shell-main-nav"></div>
+      </div>
+      <div class="spa-shell-foot"></div>
+      <div class="spa-shell-chat"></div>
+      <div class="spa-shell-modal"></div>
+    </div>
   </body>
   </html>
