Creating inline styles in layout.html for testing.

--- a/3/spa/layout.html
+++ b/3/spa/layout.html
@@ -4,6 +4,30 @@
     <title>HTML Layout</title>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="css/spa.css" type="text/css"/>
+    <style>
+      .spa-shell-head,
+      .spa-shell-head-logo,
+      .spa-shell-head-acct,
+      .spa-shell-head-search,
+      .spa-shell-main,
+      .spa-shell-main-nav,
+      .spa-shell-main-content,
+      .spa-shell-foot,
+      .spa-shell-chat,
+      .spa-shell-modal {
+        position : absolute;
+      }
+      .spa-shell-head {}
+      .spa-shell-head-logo {}
+      .spa-shell-head-acct {}
+      .spa-shell-head-search {}
+      .spa-shell-main {}
+      .spa-shell-main-nav {}
+      .spa-shell-main-content {}
+      .spa-shell-foot {}
+      .spa-shell-chat {}
+      .spa-shell-modal {}
+    </style>
   </head>
   <body>
     <div id="spa">
@@ -14,7 +38,7 @@
       </div>
       <div class="spa-shell-main">
         <div class="spa-shell-main-nav"></div>
-        <div class="spa-shell-main-nav"></div>
+        <div class="spa-shell-main-content"></div>
       </div>
       <div class="spa-shell-foot"></div>
       <div class="spa-shell-chat"></div>
