PUBLIC METHODS : Created test for /toggleChat/ .

--- a/3/spa/spa.html
+++ b/3/spa/spa.html
@@ -18,7 +18,9 @@
 
   <!-- initialize the application once the DOM is ready -->
   <script>
-    $(function(){spa.initModule($('#spa'));});
+    $(function(){
+      spa.initModule($('#spa'));
+    });
   </script>
 
 </head>
