Planning file structure for adding feature modules.

--- a/3/spa/layout.html
+++ b/3/spa/layout.html
@@ -3,7 +3,7 @@
   <head>
     <title>HTML Layout</title>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="css/spa.css" type="text/css"/>
+    <link rel="stylesheet" href="../../4/spa/css/spa.css" type="text/css"/>
     <style>
       .spa-shell-head,
       .spa-shell-head-logo,
