--- a/4/spa/spa.html
+++ b/4/spa/spa.html
@@ -2,10 +2,11 @@
 <html lang="en-US">
 <head>
   <meta charset="UTF-8">
-  <title>SPA3</title>
+  <title>SPA4</title>
 
   <!-- stylesheets -->
   <link rel="stylesheet" href="css/spa.css" type="text/css">
+  <link rel="stylesheet" href="css/spa.chat.css"  type="text/css"/>
   <link rel="stylesheet" href="css/spa.shell.css" type="text/css">
 
   <!-- third-party javascript -->
@@ -13,8 +14,11 @@
   <script type="text/javascript" src="js/jq/jquery.uriAnchor.js"></script>
 
   <!-- my javascript -->
-  <script type="text/javascript" src="js/spa.js"></script>
+  <script type="text/javascript" src="js/spa.js"      ></script>
+  <script type="text/javascript" src="js/spa.util.js" ></script>
+  <script type="text/javascript" src="js/spa.model.js"></script>
   <script type="text/javascript" src="js/spa.shell.js"></script>
+  <script type="text/javascript" src="js/spa.chat.js" ></script>
 
   <!-- initialize the application once the DOM is ready -->
   <script>
