Made changes to the browser document spa.html.  Added support for rendering in Internet Explorer 9+.  Ordering of third- party stylesheets and javascript is deliberate, so that if namespace conflicts occur my stylesheets and javascript will overrule the third-party conventions.

--- a/4/spa/spa.html
+++ b/4/spa/spa.html
@@ -1,13 +1,19 @@
 <!doctype html>
+<!-- spa.html -->
+<!-- spa browser document -->
 <html lang="en-US">
 <head>
-  <meta charset="UTF-8">
+  <!-- ie9+ rendering support for latest standards -->
+  <meta http-equiv="Content-Type" content="text/html" charset="ISO-8859-1">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>SPA4</title>
 
-  <!-- stylesheets -->
-  <link rel="stylesheet" href="css/spa.css" type="text/css">
-  <link rel="stylesheet" href="css/spa.chat.css"  type="text/css"/>
-  <link rel="stylesheet" href="css/spa.shell.css" type="text/css">
+  <!-- third-party stylesheets -->
+
+  <!-- my stylesheets -->
+  <link rel="stylesheet" href="css/spa.css"       type="text/css" />
+  <link rel="stylesheet" href="css/spa.chat.css"  type="text/css" />
+  <link rel="stylesheet" href="css/spa.shell.css" type="text/css" />
 
   <!-- third-party javascript -->
   <script type="text/javascript" src="js/jq/jquery-1.9.1.js"></script>
